--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a{
     /* margin: 10px 10px; */
     text-align: center;
     font-size: xx-large;
-    color: black;
+    color: white;
 }
 .name video{
     /* background-image: url('https://i.pinimg.com/236x/d7/c7/ec/d7c7ec63adbe1a1468fd67e046b4c1ab.jpg'); */
